--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
   <div class="header">
     <img src="./eisenhower-matrix.jpg">
     <a 
-        class="more-inf" 
+        class="header__link" 
         href="https://goal-life.com/page/method/matrix-eisenhower"
     >
       Want more details?
     </a>
   </div>
-  <div class="centered-main-page-element">
-    <p id="top-section-for-adding-element-to-list">
+  <div class="main">
+    <p id="main-header">
       <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
+      <div class="main__task">
         <input id="new-task"class="task" type="text">
         <button>Add</button>
       </div>
