--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       charset="utf-8"
   >
 </head>
-<body>
+<body class="page">
   <div class="header">
-    <img src="./eisenhower-matrix.jpg">
+    <img class="header__img" src="./eisenhower-matrix.jpg">
     <a 
         class="header__link" 
         href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -24,42 +24,42 @@
   </div>
   <div class="main">
     <p id="main-header">
-      <label for="new-task">Add Item</label>
+      <label class="title-3 main-header__label" for="new-task">Add Item</label>
       <div class="main__task">
-        <input id="new-task"class="task" type="text">
-        <button>Add</button>
+        <input id="new-task"class="input-text task" type="text">
+        <button class="button">Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
-    <ul id="incomplete-tasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
+    <h3 class="title-3">Todo</h3>
+    <ul class="list__main" id="incomplete-tasks">
+      <li class="main-list__item">
+        <input class="list-item__checkbox" type="checkbox">
+        <label class="list-item__label task">Pay Bills</label>
+        <input type="text" class="input-text task">
+        <button class="button edit">Edit</button>
+        <button class="button delete">
+          <img class="delete__img" src="./remove.svg">
         </button>
       </li>
-      <li class="edit-mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete">
-          <img src="./remove.svg">
+      <li class="main-list__item edit-mode">
+        <input class="list-item__checkbox" type="checkbox">
+        <label class="list-item__label task">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="input-text task">
+        <button class="button edit">Save</button>
+        <button class="button delete">
+          <img class="delete__img" src="./remove.svg">
         </button>
       </li>
     </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
+    <h3 class="title-3">Completed</h3>
+    <ul class="list__main list-completed" id="completed-tasks">
+      <li class="main-list__item">
+        <input class="list-item__checkbox" type="checkbox" checked>
+        <label class="list-item__label task list-completed__label">See the Doctor</label>
+        <input type="text" class="input-text task">
+        <button class="button edit">Edit</button>
+        <button class="button delete">
+          <img class="delete__img" src="./remove.svg">
         </button>
       </li>
     </ul>
