--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="page">
   <header class="header">
-    <img class="header__img" src="./eisenhower-matrix.jpg">
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="header logo">
     <a 
         class="header__link" 
         href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -38,7 +38,7 @@
         <input type="text" class="input-text task">
         <button class="button edit">Edit</button>
         <button class="button delete">
-          <img class="delete__img" src="./remove.svg">
+          <img class="delete__img" src="./remove.svg" alt="remove icon">
         </button>
       </li>
       <li class="main-list__item edit-mode">
@@ -47,7 +47,7 @@
         <input type="text" value="Go Shopping" class="input-text task">
         <button class="button edit">Save</button>
         <button class="button delete">
-          <img class="delete__img" src="./remove.svg">
+          <img class="delete__img" src="./remove.svg" alt="remove icon">
         </button>
       </li>
     </ul>
@@ -59,7 +59,7 @@
         <input type="text" class="input-text task">
         <button class="button edit">Edit</button>
         <button class="button delete">
-          <img class="delete__img" src="./remove.svg">
+          <img class="delete__img" src="./remove.svg" alt="remove icon">
         </button>
       </li>
     </ul>
